feat: update content

--- a/content/pages/work.mdx
+++ b/content/pages/work.mdx
@@ -7,7 +7,7 @@ I'm currently a Product Engineer at [Merlin AI by Foyer](https://getmerlin.in), 
 
 Before joining Merlin AI, I was a Software Engineer at [SARAL - The Influencer OS](https://getsaral.com), where I built core features and internal tools that improved efficiency and decision-making for influencer campaigns. I delivered a revamped dashboard that reduced onboarding time by 30% and engineered multi-select drag-and-drop features that increased ops efficiency by 40%.
 
-Prior to that, I was the Founding Product Engineer at [Proof-of-Skill Protocol](https://proofofskill.org), where I architected and launched a decentralized skill validation protocol revolutionizing unbiased, transparent candidate evaluation for tech hiring. I led MVP development, designed a voting-based consensus algorithm for 150+ validators, and built proctored assessment workflows that cut time-to-interview by 50%.
+Prior to that, I was the Founding Product Engineer at [Proof-of-Skill Protocol](https://proofofskill.org), where I developed UI flows and we launched a decentralized skill validation protocol revolutionizing unbiased, transparent candidate evaluation for tech hiring. I led MVP development, designed voting-based consensus flows for 150+ validators, and built proctored assessment workflows that cut time-to-interview by 50%.
 
 Earlier in my career, I worked as a Research Assistant at [National Yang Ming Chiao Tung University](https://www.nycu.edu.tw/) in Taiwan, where I built and optimized indoor positioning system interfaces for cutting-edge IoT research. I enhanced UWB positioning accuracy from 20cm to under 10cm and enabled 3D real-time visualization for production-ready factories and research labs.
 
