feat: add yt videos in about section

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -14,3 +14,9 @@ I'm particularly excited about the intersection of AI and user experience, havin
 Some conferences, meetups and interviews I've been a part of.
 
 <Features />
+
+## YouTube Videos
+
+Here are some of my recent videos where I share insights about development, AI, and tech.
+
+<YouTubeVideos />
