--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -3,6 +3,8 @@ title: About
 description: Product Engineer passionate about AI, full-stack development, and building impactful products.
 ---
 
+![About Banner](/about-banner.png)
+
 I'm a Product Engineer based in Bengaluru, India, passionate about building impactful AI, SaaS, and platform products. I love taking products from zero-to-one, whether it's architecting decentralized protocols like [Proof-of-Skill](https://proofofskill.org), building AI-powered tools like the [AI Roadmap Generator](https://airoadmapgenerator.com), or shipping features for millions of users at companies like Merlin AI.
 
 When I'm not coding, you'll find me creating educational content, speaking at meetups, or exploring new technologies. I share my journey and insights on [YouTube](https://youtube.com/milindmishra), connect with the dev community on [X](https://x.com/milindmishra_), and showcase my projects on [GitHub](https://github.com/thatbeautifuldream).
