--- a/content/gist/block-explicit-content-from-host.mdx
+++ b/content/gist/block-explicit-content-from-host.mdx
@@ -10,15 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/a36cd44b174a2d6b76a329ae1608
 isPublic: true
 ---
 
-## Description
-
-Block explicit content from host
-
-## Files
-
-### block-porn.sh
-
-```shell
+```shell title="block-porn.sh"
 #!/bin/bash
 
 # URL of the porn blocklist (StevenBlack)
@@ -57,9 +49,7 @@ echo "[!] To unlock it in the future, use:"
 echo "    sudo chflags noschg /etc/hosts"
 ```
 
-### block-porn.zsh
-
-```shell
+```shell title="block-porn.zsh"
 #!/bin/zsh
 
 # URL of the porn blocklist (StevenBlack)
