--- a/content/gist/conventional-commit-aliases.mdx
+++ b/content/gist/conventional-commit-aliases.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/7420d8f0e8fe9e6264f660166ba1
 isPublic: true
 ---
 
-## Description
-
-Conventional commit aliases
-
-## .zshrc
-
-```shell
+```shell title=".zshrc"
 # Commit, Add all, and Push — in one step.
 gcap() {
     git add . && git commit -m "$*" && git push
