--- a/content/gist/get-hostname-through-headers-on-the-server-side-in-nextjs.mdx
+++ b/content/gist/get-hostname-through-headers-on-the-server-side-in-nextjs.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/f35cbded357bd2a3716b7ed60457
 isPublic: true
 ---
 
-## Description
-
-Get hostname through headers on the server side in next.js
-
-## page.tsx
-
-```tsx
+```tsx title="page.tsx"
 import { headers } from "next/headers";
 
 export function page() {
