--- a/content/gist/ide-aliases.mdx
+++ b/content/gist/ide-aliases.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/add9797f35cd4d91946f29df2e3f
 isPublic: true
 ---
 
-## Description
-
-ide aliases
-
-## ide-alias.sh
-
-```shell
+```shell title="ide-alias.sh"
 alias c="open $1 -a \"Cursor\""
 alias v="open $1 -a \"Visual Studio Code\""
 ```
