--- a/content/gist/json-resume-og-image-satori.mdx
+++ b/content/gist/json-resume-og-image-satori.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/2248d6748588c3809bf681de62a6
 isPublic: true
 ---
 
-## Description
-
-JSON Resume OG Image (Satori)
-
-## satori.jsx
-
-```javascript
+```javascript title="satori.jsx"
 <div tw="flex flex-col w-full h-full bg-white px-14 py-10 justify-center">
   {/* Header */}
   <div tw="flex flex-col">
