--- a/content/gist/portfolio-path-revalidation-script.mdx
+++ b/content/gist/portfolio-path-revalidation-script.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/532a0267104aa6da9d2942dd6fd7
 isPublic: true
 ---
 
-## Description
-
-Portfolio path revalidation script
-
-## revalidate.sh
-
-```shell
+```shell title="revalidate.sh"
 curl -X POST https://milindmishra.com/api/revalidate \
   -H "Content-Type: application/json" \
   -d '{"path": "/blog", "secret": "lol"}'
