--- a/content/gist/precommit-hook-to-discard-all-submodule-changes.mdx
+++ b/content/gist/precommit-hook-to-discard-all-submodule-changes.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/0d005023a2de1957db07f11ee1dc
 isPublic: true
 ---
 
-## Description
-
-Precommit hook to discard all submodule changes
-
-## pre-commit
-
-```shell
+```shell title="pre-commit"
 #!/bin/bash
 # Git pre-commit hook: Discards all changes in submodules before committing. (.git/hooks/pre-commit)
 
