--- a/content/gist/resume-generated-from-httpsgithubcomthatbeautifuldreamjson-resume.mdx
+++ b/content/gist/resume-generated-from-httpsgithubcomthatbeautifuldreamjson-resume.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/0d70e38808751c8b7b53167303bd
 isPublic: true
 ---
 
-## Description
-
-Resume generated from https://github.com/thatbeautifuldream/json-resume
-
-## resume.json
-
-```json
+```json title="resume.json"
 {
   "meta": {
     "theme": "jsonresume-theme-stackoverflow"
@@ -359,4 +353,3 @@ Resume generated from https://github.com/thatbeautifuldream/json-resume
   ]
 }
 ```
-
