--- a/content/gist/setting-up-multiple-git-accounts-on-machine.mdx
+++ b/content/gist/setting-up-multiple-git-accounts-on-machine.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/318b33f62794fc977803dfb62fce
 isPublic: true
 ---
 
-## Description
-
-Setting Up Multiple Git Accounts on Machine
-
-## setup-multiple-git.md
-
-```markdown
+```markdown title="setup-multiple-git.md"
 # Setting Up Multiple Git Accounts on Mac
 
 Managing multiple Git accounts on the same machine can be simplified with the following steps. This guide ensures you can seamlessly work with personal and work accounts.
