--- a/content/gist/using-git-worktree-to-work-on-feature-branch-easily-.mdx
+++ b/content/gist/using-git-worktree-to-work-on-feature-branch-easily-.mdx
@@ -10,13 +10,7 @@ gistUrl: https://gist.github.com/thatbeautifuldream/4dafd25880d28bf9a963aed2d6d1
 isPublic: true
 ---
 
-## Description
-
-using git worktree to work on feature branch easily 
-
-## readme.md
-
-```markdown
+```markdown title="readme.md"
 # Git Worktree Cheat Sheet
 
 ## What is `git worktree`?
