--- a/content/pages/work.mdx
+++ b/content/pages/work.mdx
@@ -3,6 +3,14 @@ title: Work
 description: My previous roles and experiences.
 ---
 
+## Roles
+
+My professional journey across startups, research, and product development.
+
+<Timeline />
+
+## Experience
+
 I'm currently a Product Engineer at [Merlin AI by Foyer](https://getmerlin.in), where I'm driving product engineering initiatives focused on seamless AI integration and next-gen chat experiences. I've shipped features like ChatGPT Imports UI for 10,000+ users, launched project-based chat history pages that increased session retention by 15%, and revamped the Model Selector boosting adoption by 80%.
 
 Before joining Merlin AI, I was a Software Engineer at [SARAL - The Influencer OS](https://getsaral.com), where I built core features and internal tools that improved efficiency and decision-making for influencer campaigns. I delivered a revamped dashboard that reduced onboarding time by 30% and engineered multi-select drag-and-drop features that increased ops efficiency by 40%.
@@ -16,11 +24,5 @@ I also spent time as a Software Engineer at [Locus Connect](https://www.locuscon
 I've had the pleasure of working with various organizations in different capacities - as a UX Designer at [iNeuron.ai](https://www.ineuron.ai/) where I designed intuitive user experiences and managed design systems, and as a Technical Writer at [Plusklass](https://www.plusklass.com/) where I authored technical content for learning modules.
 
 I've also been fortunate to work on a freelance basis, delivering AI-powered products for hiring and skills validation, building recruiter analytics platforms, and engineering AI-powered quiz systems with modern tech stacks[^1].
-
-## Experience
-
-My professional journey across startups, research, and product development.
-
-<Timeline />
 
 [^1]: Including work with Vercel AI SDK, OpenAI APIs, Next.js, React, TypeScript, and various cloud infrastructure solutions across multiple client projects and open-source contributions.
