feat: publish motion animations blog

--- a/content/blog/master-css-flexbox-in-6-steps.mdx
+++ b/content/blog/master-css-flexbox-in-6-steps.mdx
@@ -19,16 +19,7 @@ Add `display: flex` and see how the items line up in a row.
 
 **Try it out:**
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/raVRvwW?default-tab=html%2Cresult&editable=true&theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/raVRvwW">Basic display: flex</a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="raVRvwW" title="Basic display: flex" />
 
 **What’s happening?**
 
@@ -39,18 +30,7 @@ Add `display: flex` and see how the items line up in a row.
 
 The `justify-content` property aligns items horizontally (the main axis). Try these CodePens showing the different options!
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/RNPdyje?default-tab=html%2Cresult&amp;editable=true&amp;theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/RNPdyje">
-    Main Axis Alignment - justify-content
-  </a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="RNPdyje" title="Main Axis Alignment - justify-content" />
 
 **Variations:**
 
@@ -68,18 +48,7 @@ The `justify-content` property aligns items horizontally (the main axis). Try th
 
 This properly controls how items are aligned vertically (the cross axis).
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/KwpERZd?default-tab=html%2Cresult&editable=true&theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/KwpERZd">
-    Cross Axis Alignment - align-items
-  </a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="KwpERZd" title="Cross Axis Alignment - align-items" />
 
 **What’s happening?**
 
@@ -89,18 +58,7 @@ This properly controls how items are aligned vertically (the cross axis).
 
 Use `flex-direction` to arrange items in a column or row. Add `flex-wrap` to wrap overflowing items.
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/azOMGrq?default-tab=html%2Cresult&editable=true&theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/azOMGrq">
-    Changing Direction & Wrapping
-  </a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="azOMGrq" title="Changing Direction & Wrapping" />
 
 **What’s happening?**
 
@@ -111,18 +69,7 @@ Use `flex-direction` to arrange items in a column or row. Add `flex-wrap` to wra
 
 Use these properties to make items expand or shrink based on available space.
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/YPXgLbd?default-tab=html%2Cresult&editable=true&theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/YPXgLbd">
-    Flex Grow & Flex Shrink
-  </a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="YPXgLbd" title="Flex Grow & Flex Shrink" />
 
 **What’s happening?**
 
@@ -133,18 +80,7 @@ Use these properties to make items expand or shrink based on available space.
 
 Want to override the alignment for just one item? Use `align-self`!
 
-<iframe
-  height="300"
-  style={{ width: "100%" }}
-  src="https://codepen.io/milindmishra/embed/OPVqZeL?default-tab=html%2Cresult&editable=true&theme-id=dark"
->
-  See the Pen{" "}
-  <a href="https://codepen.io/milindmishra/pen/OPVqZeL">
-    Individual Alignment: align-self
-  </a>{" "}
-  by Milind Mishra (<a href="https://codepen.io/milindmishra">@milindmishra</a>)
-  on <a href="https://codepen.io">CodePen</a>.
-</iframe>
+<CodePen penId="OPVqZeL" title="Individual Alignment: align-self" />
 
 **What’s happening?**
 
