feat: update home and about copies

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -5,7 +5,7 @@ description: Product Engineer passionate about AI, full-stack development, and b
 
 ![About Banner](/about-banner.png)
 
-I'm a Product Engineer based in Bengaluru, India, passionate about building impactful AI, SaaS, and platform products. I love taking products from zero-to-one, whether it's architecting decentralized protocols like [Proof-of-Skill](https://proofofskill.org), building AI-powered tools like the [AI Roadmap Generator](https://airoadmapgenerator.com), or shipping features for millions of users at companies like Merlin AI.
+Namaste 🙏🏻! I'm a Product Engineer based in Bengaluru, India, passionate about building impactful SaaS and platform products. I love taking products from zero-to-one and elevating products from one-to-hundred.
 
 When I'm not coding, you'll find me creating educational content, speaking at meetups, or exploring new technologies. I share my journey and insights on [YouTube](https://youtube.com/milindmishra), connect with the dev community on [X](https://x.com/milindmishra_), and showcase my projects on [GitHub](https://github.com/thatbeautifuldream).
 
