--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -3,8 +3,8 @@ title: 🇮🇳 Product Engineer
 description: Product-focused engineer passionate about building impactful AI, SaaS, and platform products that delight users and reimagine human-technology interaction.
 ---
 
-I'm an 🇮🇳 Product Engineer living in Bengaluru, Karnataka. I love creating beautiful software that delights users and reimagines the way we interact with technology. I'm passionate about building impactful AI, SaaS, and platform products, with a proven track record of taking ideas from zero-to-one.
+Namaste 🙏🏻! I'm an 🇮🇳 Product Engineer living in Bengaluru, Karnataka. I love creating beautiful software that delights users and reimagines the way we interact with technology. I'm passionate about building impactful SaaS and platform products, and love taking ideas from zero-to-one and elevating them from one-to-hundred.
 
-I'm currently at Merlin AI by Foyer, where I focus on driving product engineering initiatives for next-gen AI chat experiences. I've shipped features that serve millions of users, from ChatGPT import tools to enhanced model selectors that boost adoption by 80%. After hours, I'm exploring AI-native applications, building open source projects, and sharing knowledge through talks and technical writing.
+I'm currently at Merlin AI by Foyer, where I focus on driving product engineering initiatives for next-gen AI chat experiences. I've shipped features that serve millions of users, from ChatGPT import tools to enhanced model selectors to project sharing and collaboration that boost platform adoption. After hours, I'm exploring AI-native applications, building open source projects, and sharing knowledge through talks and technical writing.
 
 I'm most active on [X](https://x.com/milindmishra_) and [GitHub](https://github.com/thatbeautifuldream) if you want to chat or see what I'm building. You can also find me speaking at React meetups or creating tools like the [AI Roadmap Generator](https://airoadmapgenerator.com) that help thousands of developers learn and grow.
