feat: add top tracks ui on home

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -10,3 +10,5 @@ I'm currently at Merlin AI by Foyer, where I focus on driving product engineerin
 I'm most active on [X](https://x.com/milindmishra_) and [GitHub](https://github.com/thatbeautifuldream) if you want to chat or see what I'm building. You can also find me speaking at React meetups or creating tools like the [AI Roadmap Generator](https://airoadmapgenerator.com) that help thousands of developers learn and grow.
 
 <SpotifyNowPlaying />
+
+<SpotifyTopTracks />
