fix: update home title and fix copy

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,9 +1,9 @@
 ---
-title: 🇮🇳 Product Engineer
+title: Milind's Portfolio
 description: Product-focused engineer passionate about building impactful AI, SaaS, and platform products that delight users and reimagine human-technology interaction.
 ---
 
-Namaste 🙏🏻! I'm an 🇮🇳 Product Engineer living in Bengaluru, Karnataka. I love creating beautiful software that delights users and reimagines the way we interact with technology. I'm passionate about building impactful SaaS and platform products, and love taking ideas from zero-to-one and elevating them from one-to-hundred.
+Namaste 🙏🏻! I'm a Product Engineer based out of Bengaluru, India. I love creating beautiful software that delights users and reimagines the way we interact with technology. I'm passionate about building impactful SaaS and platform products, and love taking ideas from zero-to-one and elevating them from one-to-hundred.
 
 I'm currently at Merlin AI by Foyer, where I focus on driving product engineering initiatives for next-gen AI chat experiences. I've shipped features that serve millions of users, from ChatGPT import tools to enhanced model selectors to project sharing and collaboration that boost platform adoption. After hours, I'm exploring AI-native applications, building open source projects, and sharing knowledge through talks and technical writing.
 
