feat: geist ftw and related chores

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,13 +1,7 @@
 ---
 title: About
-description: Product Engineer passionate about AI, full-stack development, and building impactful products.
+description: Little more about Milind.
 ---
-
-![About Banner](/about-banner.png)
-
-Namaste 🙏🏻! I'm a Product Engineer based in Bengaluru, India, passionate about building impactful SaaS and platform products. I love taking products from zero-to-one and elevating products from one-to-hundred.
-
-When I'm not coding, you'll find me creating educational content, speaking at meetups, or exploring new technologies. I share my journey and insights on [YouTube](https://youtube.com/milindmishra), connect with the dev community on [X](https://x.com/milindmishra_), and showcase my projects on [GitHub](https://github.com/thatbeautifuldream).
 
 I'm particularly excited about the intersection of AI and user experience, having worked on everything from conversational interfaces to real-time applications. My recent projects have reached thousands of users and include tools that help developers visualize data, generate learning roadmaps, and discover side projects.
 
@@ -16,9 +10,3 @@ I'm particularly excited about the intersection of AI and user experience, havin
 Some conferences, meetups and interviews I've been a part of.
 
 <Features />
-
-## YouTube Videos
-
-Here are some of my recent videos where I share insights about development, AI, and tech.
-
-<YouTubeVideos />
