fix: update og links to point updated route

--- a/content/post/evolution-of-product-building-clear-intent.mdx
+++ b/content/post/evolution-of-product-building-clear-intent.mdx
@@ -3,8 +3,8 @@ title: "The Evolution of Product Building: Communicating Clear Intent"
 description: "How the space has evolved and how we build products/experiences through clear communication and intent"
 date: 2024-01-15
 datePublished: 2024-01-15T10:00:00Z
-cover: "https://milindmishra.com/api/og?title=The%20Evolution%20of%20Product%20Building:%20Communicating%20Clear%20Intent&description=How%20the%20space%20has%20evolved%20and%20how%20we%20build%20products/experiences%20through%20clear%20communication%20and%20intent"
-image: "https://milindmishra.com/api/og?title=The%20Evolution%20of%20Product%20Building:%20Communicating%20Clear%20Intent&description=How%20the%20space%20has%20evolved%20and%20how%20we%20build%20products/experiences%20through%20clear%20communication%20and%20intent"
+cover: "https://milindmishra.com/og?title=The%20Evolution%20of%20Product%20Building:%20Communicating%20Clear%20Intent&description=How%20the%20space%20has%20evolved%20and%20how%20we%20build%20products/experiences%20through%20clear%20communication%20and%20intent"
+image: "https://milindmishra.com/og?title=The%20Evolution%20of%20Product%20Building:%20Communicating%20Clear%20Intent&description=How%20the%20space%20has%20evolved%20and%20how%20we%20build%20products/experiences%20through%20clear%20communication%20and%20intent"
 slug: "evolution-of-product-building-clear-intent"
 tags: "product design, communication, user experience, development"
 ---
