feat: fix favicon placement in app router

--- a/content/pages/projects.mdx
+++ b/content/pages/projects.mdx
@@ -3,7 +3,9 @@ title: Projects
 description: I've built a lot of projects, apps and tools over the years.
 ---
 
-I've built a lot of projects, apps and tools over the years. Many have failed and some have succeeded, but I've learned a lot from each of them.
+
+
+{/* I've built a lot of projects, apps and tools over the years. Many have failed and some have succeeded, but I've learned a lot from each of them.
 
 One of my most successful projects is the [AI Roadmap Generator](https://airoadmapgenerator.com) — a web app that creates personalized and visual learning roadmaps powered by Next.js, React, Canvas, and LLMs. Within months of launch, it generated over 250 roadmaps and reached 5,600+ unique visitors. The project was recognized as a successful launch on Peerlist, with Akash Bhadange noting it as "by far the most successful project launch on Peerlist." It features real-time topic-to-roadmap generation with highly interactive visualizations, empowering thousands of learners and engineers to break down any tech domain.
 
@@ -11,4 +13,4 @@ Another project I'm proud of is [Sideprojects Directory](https://sideprojects.di
 
 I also built [JSON Visualizer](https://jsonvisualiser.com) — an interactive tool for tree and grid visualization of complex JSON structures. It's been adopted by hundreds of developers for production debugging and API integration, praised for its performance compared to other online tools. The open-source tool is designed with an intuitive UI for both technical and non-technical users, significantly reducing time to diagnose data issues and has been referenced as a recommended resource in developer forums.
 
-These projects represent my passion for building tools that genuinely help developers and learners. Each one has taught me something different about product development, user experience, and the importance of solving real problems that people face in their daily work.
+These projects represent my passion for building tools that genuinely help developers and learners. Each one has taught me something different about product development, user experience, and the importance of solving real problems that people face in their daily work. */}
