--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-Milind's Portfolio
-==================
+     320 text files.
+     237 unique files.                                          
+      85 files ignored.
 
-Just messing around the internet with my stuff :p
+github.com/AlDanial/cloc v 2.06  T=0.16 s (1505.1 files/s, 216512.9 lines/s)
+--------------------------------------------------------------------------------
+Language                      files          blank        comment           code
+--------------------------------------------------------------------------------
+TypeScript                      136           1094            520          11221
+YAML                              2           2226              3           8784
+Markdown                         78           1600              0           6074
+JavaScript                        8              8             71           1661
+JSON                              7              0              0            371
+CSS                               2             51              7            359
+SQL                               3              0              1             25
+Bourne Again Shell                1              3              2             12
+--------------------------------------------------------------------------------
+SUM:                            237           4982            604          28507
+--------------------------------------------------------------------------------
