feat: add aerospace shortcuts gist and animation configurations
Add new MDX file containing comprehensive Aerospace window manager keyboard shortcuts reference including layout switching, window focusing/moving, workspaces, and resize mode. Also add extensive animation configurations with various preset transitions and easing functions for enhanced UI animations.

--- a/content/gist/aliases.mdx
+++ b/content/gist/aliases.mdx
@@ -18,6 +18,8 @@ alias pnd="pnpm run dev"
 alias pnb="pnpm run build"
 alias pns="pnpm run start"
 
+alias cloc-next="cloc . --exclude-dir=node_modules,.next,public --not-match-f='(next.config.js|package.json|package-lock.json|tsconfig.json|README.md)'"
+
 # ai commit messages
 aicmt() {
   if ! git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
