--- a/content/gist/multiple-git-user-setup-with-conventional-commit-aliases.mdx
+++ b/content/gist/multiple-git-user-setup-with-conventional-commit-aliases.mdx
@@ -13,8 +13,8 @@ isPublic: true
 ```shell title=".git_helpers.zsh"
 # Git user configurations
 declare -A GH_USERS=(
-  [personal]="thatbeautifuldream:Milind Mishra:milindself@self.com"
-  [work]="milind-work:Milind Mishra:milindwork@work.com"
+  [personal]="thatbeautifuldream:Milind Mishra:milind.mishra4@gmail.com"
+  [work]="milind-foyer:Milind Mishra:milind@foyer.work"
 )
 
 guser() {
@@ -175,3 +175,4 @@ gtype() {
     echo ""
 }
 ```
+
