feat(gist): update syntax highlighting for git config files
Change code block language from git config and ignore list to ini and text
for proper syntax highlighting in the gist about global git configuration.

--- a/content/gist/global-git-config-and-ignore-files-for-macos-systems.mdx
+++ b/content/gist/global-git-config-and-ignore-files-for-macos-systems.mdx
@@ -10,12 +10,12 @@ gistUrl: https://gist.github.com/thatbeautifuldream/0576996ba3910ae327c77ea59b9e
 isPublic: true
 ---
 
-```git config title=".gitconfig"
+```ini title=".gitconfig"
 [core]
   excludesfile = .gitignore
 ```
 
-```ignore list title=".gitignore"
+```text title=".gitignore"
 # General
 .DS_Store
 .AppleDouble
