feat: a init talk section in the about page

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -5,8 +5,8 @@ description: Little more about Milind.
 
 I'm particularly excited about the intersection of AI and user experience, having worked on everything from conversational interfaces to real-time applications. My recent projects have reached thousands of users and include tools that help developers visualize data, generate learning roadmaps, and discover side projects.
 
-## Speaking and Interviews
+## Talks
 
-Some conferences, meetups and interviews I've been a part of.
+I love sharing knowledge and connecting with the developer community through talks at meetups and conferences.
 
-<Features />
+<Talks />
