feat: update home copywriting and move project to nav item

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,10 +1,16 @@
 ---
 title: Milind's Portfolio
-description: Product-focused engineer passionate about building impactful AI, SaaS, and platform products that delight users and reimagine human-technology interaction.
+description: Product Engineer who builds things people actually use. Currently making AI feel less robotic.
 ---
 
-Namaste 🙏🏻! I'm a Product Engineer based out of Bengaluru, India. I love creating beautiful software that delights users and reimagines the way we interact with technology. I'm passionate about building impactful SaaS and platform products, and love taking ideas from zero-to-one and elevating them from one-to-hundred.
+Hey, I'm **Milind**. I build software that doesn't make people want to throw their laptop out the window.
 
-I'm currently at Merlin AI by Foyer, where I focus on driving product engineering initiatives for next-gen AI chat experiences. I've shipped features that serve millions of users, from ChatGPT import tools to enhanced model selectors to project sharing and collaboration that boost platform adoption. After hours, I'm exploring AI-native applications, building open source projects, and sharing knowledge through talks and technical writing.
+Right now I'm at **[Foyer](https://foyer.work)**, working on **Merlin AI**, you know, that thing **2 million people** use to chat with AI models. I spend my days figuring out how to make AI interfaces feel less like talking to a robot and more like, well, not that. Turns out people really appreciate when things **load instantly** and don't make them wait for a spinning wheel.
 
-I'm most active on [X](https://x.com/milindmishra_) and [GitHub](https://github.com/thatbeautifuldream) if you want to chat or see what I'm building. You can also find me speaking at React meetups or creating tools like the [AI Roadmap Generator](https://airoadmapgenerator.com) that help thousands of developers learn and grow.
+Before this, I bounced around building things: hiring platforms that tried to make recruitment less biased, IoT positioning systems that could tell you where things are in a factory (accurate to **under 10cm**, which is apparently impressive), and a bunch of early-stage startup chaos where "move fast" was less of a motto and more of a survival strategy.
+
+On the side, I make tools I wish existed. Like **[AI Roadmap Generator](https://airoadmapgenerator.com)**. Over **5,000 people** have used it to figure out what to learn next, which is wild considering I built it because I was bored one weekend. Or **[JSON Visualiser](https://jsonvisualiser.com)**, where an average dev opens it up to **49 times**. I don't know who you are, but I appreciate you.
+
+I also contribute to **[Vercel's open source stuff](https://github.com/vercel)**, give talks at React meetups about animations and AI (yes, I'm that person who gets excited about **view transitions**), and occasionally write about things I'm figuring out.
+
+If you want to chat about product, React, or why performance matters more than people think, I'm on **[X](https://x.com/milindmishra_)** and **[GitHub](https://github.com/thatbeautifuldream)**. Or just **[book some time](https://cal.com/milind)**. I promise I'm less formal than this website suggests.
